change the title web

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <title>The World!</title>
+    <title>The Sins!</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
@@ -142,7 +142,7 @@
             }}
           >
             <figcaption>
-              <small>The World!</small>
+              <small>The Sins!</small>
             </figcaption>
             <audio
               controls
